<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_marginHorizontal="8dp"
    >
    <GridLayout
        android:id="@+id/routeDataBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_shadow"
        android:columnCount="3"
        android:gravity="center"
        android:rowCount="2"
        android:paddingBottom="16dp">
        <TextView
            android:id="@+id/departureHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/wrongHour"
            android:textColor="@color/colorHour"
            android:textSize="28sp"
            card_view:fontFamily="@font/pt_serif_bold" />
        <TextView
            android:id="@+id/delayInMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/wrongDelay"
            android:textColor="@color/colorGreyedOut"
            android:textSize="16sp"
            card_view:fontFamily="@font/bitter"
 />
        <TextView
            android:id="@+id/operatorIcon"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            android:background="@color/colorAccent"

            android:gravity="center"
            android:padding="4dp"
            android:text="@string/errorOperator"
            android:textSize="10sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/onPrimary"
            card_view:fontFamily="@font/roboto_medium" />
        <TextView
            android:id="@+id/trainRoute"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_gravity="center_vertical"
            android:text="@string/noData"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/colorGreyedOut"
            android:textSize="14sp"
            card_view:fontFamily="@font/roboto" />
    </GridLayout>
</androidx.cardview.widget.CardView>
