<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">
    <RelativeLayout
        android:id="@+id/stations_input_container"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <RelativeLayout
            android:id="@+id/text_box_start"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_corners"
            android:elevation="4dp"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <AutoCompleteTextView
                android:id="@+id/start_station"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:completionThreshold="1"
                android:ems="30"
                android:hint="@string/start_station"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="60dp"
                android:paddingRight="60dp"
                app:fontFamily="sans-serif" />

            <ImageButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/localization_image"
                android:scaleType="fitXY"
                android:src="@drawable/location" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_below="@id/text_box_start"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_corners"
            android:elevation="4dp"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <AutoCompleteTextView
                android:id="@+id/end_station"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:completionThreshold="1"
                android:ems="18"
                android:hint="@string/end_station"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:paddingStart="20dp"
                android:paddingRight="60dp"
                android:paddingEnd="60dp"
                app:fontFamily="sans-serif" />

            <ImageButton
                android:id="@+id/reverseButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/reverse"
                android:contentDescription="@string/reverse_button"/>

        </RelativeLayout>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/search_btn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:background="@null"
        android:contentDescription="@string/search_button"
        android:scaleType="fitCenter"
        android:src="@drawable/search_button_sel"
        android:onClick="onSearch"/>

</LinearLayout>
